# selfani

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml
.github/workflows/: build.yml
src/: config.rs  cookies.rs  cover.rs  download.rs  hls.rs  login.rs  main.rs  mux.rs  playurl.rs  provide.json  resolve.rs  search.rs  select.rs  term.rs  wbi.rs
