[package]
name = "selfani"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
    "io-util",
] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls-native-roots",
    "cookies",
    "rustls-tls-manual-roots",
] }
reqwest_cookie_store = "0.9.0"
cookie_store = { version = "0.22.0", features = ["serde"] }
regex = "1.11.3"
url = "2.5.7"
md5 = "0.8.0"
urlencoding = "2.1"
once_cell = "1.21.3"
toml = "0.9.7"
actix-web = { version = "4.11.0", default-features = false, features = [
    "macros",
    "rustls-0_23",
] }
actix-cors = "0.7.1"
futures = "0.3.31"
log = "0.4.28"
env_logger = "0.11.8"
qrcode = "0.14.1"
indicatif = "0.18.0"
rustls = { version = "0.23.32", default-features = false, features = [
    "aws-lc-rs",
] }
